kubernetes/applications/invidious/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invidious-route
  namespace: apps
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      namespace: traefik
  hostnames:
    - "invidious2.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: invidious
          port: 80
